prev26/src/prev26lang/phase/synan/Prev26Parser.java
// Generated from Prev26Parser.g4 by ANTLR 4.13.2


    package prev26lang.phase.synan;

    import java.util.*;
    import prev26lang.common.report.*;
    import prev26lang.phase.lexan.*;
    import prev26lang.phase.abstr.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Prev26Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTCONST=1, CHARCONST=2, STRING=3, PERIOD=4, COMMA=5, COLON=6, DEFINE=7, 
		PLUS=8, MINUS=9, MULTIPLY=10, DIVIDE=11, MODULO=12, EQUALS=13, NOTEQUALS=14, 
		LEQUALS=15, MEQUALS=16, LESSER=17, GREATER=18, LEFTBR=19, RIGHTBR=20, 
		LEFTSQBR=21, RIGHTSQBR=22, LEFTCBR=23, RIGHTCBR=24, CARET=25, AND=26, 
		AS=27, BOOL=28, DO=29, CHAR=30, ELSE=31, END=32, FALSE=33, FUN=34, IF=35, 
		IN=36, INT=37, LET=38, NIL=39, NONE=40, NOT=41, OR=42, SIZEOF=43, THEN=44, 
		TRUE=45, TYP=46, VAR=47, VOID=48, WHILE=49, NAME=50, COMMENT=51, WS=52;
	public static final int
		RULE_source = 0, RULE_par_list_nodes = 1, RULE_par_list_zero_nodes = 2, 
		RULE_expr_list = 3, RULE_expr_list_zero = 4, RULE_expr_list_zero_nodes = 5, 
		RULE_comp_list_nodes = 6, RULE_comp_list_zero_nodes = 7, RULE_type_list_nodes = 8, 
		RULE_type_list_zero_nodes = 9, RULE_defn_list_nodes = 10, RULE_prog = 11, 
		RULE_defn = 12, RULE_type = 13, RULE_expr = 14, RULE_defineExpr = 15, 
		RULE_typeExpr = 16, RULE_logicOrExpr = 17, RULE_logicAndExpr = 18, RULE_comparisonExpr = 19, 
		RULE_additiveExpr = 20, RULE_multiplicativeExpr = 21, RULE_prefixExpr = 22, 
		RULE_postfixExpr = 23, RULE_atomExpr = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "par_list_nodes", "par_list_zero_nodes", "expr_list", "expr_list_zero", 
			"expr_list_zero_nodes", "comp_list_nodes", "comp_list_zero_nodes", "type_list_nodes", 
			"type_list_zero_nodes", "defn_list_nodes", "prog", "defn", "type", "expr", 
			"defineExpr", "typeExpr", "logicOrExpr", "logicAndExpr", "comparisonExpr", 
			"additiveExpr", "multiplicativeExpr", "prefixExpr", "postfixExpr", "atomExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'.'", "','", "':'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "'^'", "'and'", "'as'", "'bool'", "'do'", 
			"'char'", "'else'", "'end'", "'false'", "'fun'", "'if'", "'in'", "'int'", 
			"'let'", "'nil'", "'none'", "'not'", "'or'", "'sizeof'", "'then'", "'true'", 
			"'typ'", "'var'", "'void'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTCONST", "CHARCONST", "STRING", "PERIOD", "COMMA", "COLON", 
			"DEFINE", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "EQUALS", 
			"NOTEQUALS", "LEQUALS", "MEQUALS", "LESSER", "GREATER", "LEFTBR", "RIGHTBR", 
			"LEFTSQBR", "RIGHTSQBR", "LEFTCBR", "RIGHTCBR", "CARET", "AND", "AS", 
			"BOOL", "DO", "CHAR", "ELSE", "END", "FALSE", "FUN", "IF", "IN", "INT", 
			"LET", "NIL", "NONE", "NOT", "OR", "SIZEOF", "THEN", "TRUE", "TYP", "VAR", 
			"VOID", "WHILE", "NAME", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prev26Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    private Location loc(final Token tok) { return new Location((LexAn.LocLogToken)tok); }
	    private Location loc(final Locatable loc) { return new Location(loc); }
	    private Location loc(final Token tok1, final Token tok2) { return new Location((LexAn.LocLogToken)tok1, (LexAn.LocLogToken)tok2); }
	    private Location loc(final Token tok1, final Locatable loc2) { if (loc2 == null) return null; return new Location((LexAn.LocLogToken)tok1, loc2); }
	    private Location loc(final Locatable loc1, final Token tok2) { if (loc1 == null) return null; return new Location(loc1, (LexAn.LocLogToken)tok2); }
	    private Location loc(final Locatable loc1, final Locatable loc2) { if ((loc1 == null) || (loc2 == null)) return null; return new Location(loc1, loc2); }


	public Prev26Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AST.Nodes<AST.FullDefn> ast;
		public ProgContext p;
		public TerminalNode EOF() { return getToken(Prev26Parser.EOF, 0); }
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((SourceContext)_localctx).p = prog();
			setState(51);
			match(EOF);
			 ((SourceContext)_localctx).ast =  ((SourceContext)_localctx).p.ast; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Par_list_nodesContext extends ParserRuleContext {
		public AST.Nodes<AST.ParDefn> nodes;
		public List<AST.ParDefn> pars = new ArrayList<>(); ;;
		public Token n1;
		public TypeContext t;
		public Token n;
		public List<TerminalNode> COLON() { return getTokens(Prev26Parser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(Prev26Parser.COLON, i);
		}
		public List<TerminalNode> NAME() { return getTokens(Prev26Parser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(Prev26Parser.NAME, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Prev26Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Prev26Parser.COMMA, i);
		}
		public Par_list_nodesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_par_list_nodes; }
	}

	public final Par_list_nodesContext par_list_nodes() throws RecognitionException {
		Par_list_nodesContext _localctx = new Par_list_nodesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_par_list_nodes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((Par_list_nodesContext)_localctx).n1 = match(NAME);
			setState(55);
			match(COLON);
			setState(56);
			((Par_list_nodesContext)_localctx).t = type();
			 AST.ParDefn pd = new AST.ParDefn((((Par_list_nodesContext)_localctx).n1!=null?((Par_list_nodesContext)_localctx).n1.getText():null), ((Par_list_nodesContext)_localctx).t.ast); _localctx.pars.add(pd); Abstr.locAttr.put(pd, loc(((Par_list_nodesContext)_localctx).n1, (((Par_list_nodesContext)_localctx).t!=null?(((Par_list_nodesContext)_localctx).t.stop):null))); 
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(58);
				match(COMMA);
				setState(59);
				((Par_list_nodesContext)_localctx).n = match(NAME);
				setState(60);
				match(COLON);
				setState(61);
				((Par_list_nodesContext)_localctx).t = type();
				 AST.ParDefn pd1 = new AST.ParDefn((((Par_list_nodesContext)_localctx).n!=null?((Par_list_nodesContext)_localctx).n.getText():null), ((Par_list_nodesContext)_localctx).t.ast); _localctx.pars.add(pd1); Abstr.locAttr.put(pd1, loc(((Par_list_nodesContext)_localctx).n, (((Par_list_nodesContext)_localctx).t!=null?(((Par_list_nodesContext)_localctx).t.stop):null))); 
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((Par_list_nodesContext)_localctx).nodes =  new AST.Nodes<>(_localctx.pars); Abstr.locAttr.put(_localctx.nodes, loc(((Par_list_nodesContext)_localctx).n1, (((Par_list_nodesContext)_localctx).t!=null?(((Par_list_nodesContext)_localctx).t.stop):null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Par_list_zero_nodesContext extends ParserRuleContext {
		public AST.Nodes<AST.ParDefn> nodes;
		public Par_list_nodesContext a;
		public Par_list_nodesContext par_list_nodes() {
			return getRuleContext(Par_list_nodesContext.class,0);
		}
		public Par_list_zero_nodesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_par_list_zero_nodes; }
	}

	public final Par_list_zero_nodesContext par_list_zero_nodes() throws RecognitionException {
		Par_list_zero_nodesContext _localctx = new Par_list_zero_nodesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_par_list_zero_nodes);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RIGHTBR:
				enterOuterAlt(_localctx, 1);
				{
				 ((Par_list_zero_nodesContext)_localctx).nodes =  new AST.Nodes<>(); Abstr.locAttr.put(_localctx.nodes, loc(getCurrentToken())); 
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				((Par_list_zero_nodesContext)_localctx).a = par_list_nodes();
				 ((Par_list_zero_nodesContext)_localctx).nodes =  ((Par_list_zero_nodesContext)_localctx).a.nodes; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr_listContext extends ParserRuleContext {
		public AST.Expr ast;
		public List<AST.Expr> exprs = new ArrayList<>(); Token start;;
		public ExprContext e;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Prev26Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Prev26Parser.COMMA, i);
		}
		public Expr_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_list; }
	}

	public final Expr_listContext expr_list() throws RecognitionException {
		Expr_listContext _localctx = new Expr_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((Expr_listContext)_localctx).e = expr();
			 _localctx.exprs.add(((Expr_listContext)_localctx).e.ast); ((Expr_listContext)_localctx).start =  (((Expr_listContext)_localctx).e!=null?(((Expr_listContext)_localctx).e.start):null); 
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(79);
				match(COMMA);
				setState(80);
				((Expr_listContext)_localctx).e = expr();
				 _localctx.exprs.add(((Expr_listContext)_localctx).e.ast); 
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 AST.Nodes<AST.Expr> nodes = new AST.Nodes<>(_localctx.exprs); ((Expr_listContext)_localctx).ast =  new AST.Exprs(nodes);
			    Abstr.locAttr.put(_localctx.ast, loc(_localctx.start, (((Expr_listContext)_localctx).e!=null?(((Expr_listContext)_localctx).e.stop):null))); Abstr.locAttr.put(nodes, loc(_localctx.start, (((Expr_listContext)_localctx).e!=null?(((Expr_listContext)_localctx).e.stop):null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr_list_zeroContext extends ParserRuleContext {
		public AST.Expr ast;
		public Expr_listContext e;
		public Expr_listContext expr_list() {
			return getRuleContext(Expr_listContext.class,0);
		}
		public Expr_list_zeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_list_zero; }
	}
